Changelog for mdevd.

In 0.1.7.0
----------

 - Bugfixes.
 - New option: -I intake.


In 0.1.6.5
----------

 - Bugfixes.


In 0.1.6.4
----------

 - Code refactor.


In 0.1.6.3
----------

 - Adaptation to skalibs-2.14.0.0.
 - Bugfixes.


In 0.1.6.2
----------

 - Build system upgrade.


In 0.1.6.1
----------

 - Adaptation to skalibs-2.13.0.0.


In 0.1.6.0
----------

 - Bugfixes.
 - mdevd-coldplug can now be synchronous with the -O option.


In 0.1.5.2
----------

 - Bugfixes.
 - Adaptation to skalibs-2.12.0.0.


In 0.1.5.1
----------

 - Bugfixes.


In 0.1.5.0
----------

 - Adaptation to skalibs-2.11.0.0.
 - New mdevd option: -O nlgroups, to rebroadcast uevents to netlink
 - The * and & directives are now triggered by all action types.


In 0.1.4.0
----------

 - Bugfixes.
 - New +, - and & command prefixes accepted in mdev.conf, that run
their command interpreted by execlineb instead of /bin/sh.


In 0.1.3.0
----------

 - Bugfixes.
 - New -C option for mdevd to trigger a coldplug when ready.


In 0.1.2.0
----------

 - -o fd option to see the uevents after mdevd has processed them.


In 0.1.1.2
----------

 - Bugfixes.


In 0.1.1.1
----------

 - Bugfixes.


In 0.1.1.0
----------

 - Adaptation to skalibs-2.9.0.0.


In 0.1.0.3
----------

 - Adaptation to skalibs-2.8.0.0.
 - Everything builds as PIC by default.


In 0.1.0.2
----------

 - Bugfixes.
 - Adaptation to skalibs-2.7.0.0.
 - Optional nsss support added.


In 0.1.0.1
----------

 - Bugfixes.


In 0.1.0.0
----------

 - mdevd-netlink removed.
 - mdevd now listens to the netlink itself.
 - mdevd-coldplug now doesn't print events to stdout; it triggers
the events in the kernel instead. This means mdevd should run first
to catch the events, and then mdevd-coldplug should be launched.


In 0.0.1.0
----------

 - Initial release.