@@ -1,3 +1,4 @@
+/*.pc
 *.o
 *.lo
 /*.a.xyzzy
