@@ -24,7 +24,7 @@
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a>
 dependency bumped to 2.14.4.0. </li>
  <li> <a href="//skarnet.org/software/nsss/">nsss</a>
-optional dependency bumped to 0.2.0.6. </li>
+optional dependency bumped to 0.2.1.0. </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a>
 optional dependency bumped to 2.9.7.0. </li>
 </ul>
