@@ -1,2 +1,2 @@
-/package/prog/skalibs
-/package/admin/nsss $usensss
+true		true	/package/prog/skalibs	2.14.4.0	libskarnet
+$usensss	false	/package/admin/nsss	0.2.1.0		libnsss
