@@ -24,7 +24,7 @@ Fine tuning of the installation directories:
   --libdir=DIR                  static library files [PREFIX/lib]
   --includedir=DIR              C header files [PREFIX/include]
   --pkgconfdir=DIR              pkg-config .pc files [PREFIX/lib/pkgconfig]
-
+${configure_help_install}
  If no --prefix option is given, by default libdir (but not dynlibdir) will be
  /usr/lib, and includedir will be /usr/include.
 
@@ -34,7 +34,7 @@ Dependencies:
   --with-lib=DIR                add DIR to the list of searched directories for static libraries
   --with-dynlib=DIR             add DIR to the list of searched directories for shared libraries
   --with-pkgconfig[=PROG]       use pkg-config to look for dependencies
-
+${configure_help_dependencies}
  If no --prefix option is given, by default sysdeps will be fetched from
  /usr/lib/skalibs/sysdeps.
 
@@ -47,8 +47,7 @@ Optional features:
   --enable-pkgconfig            Build and install .pc files for pkg-config [disabled]
   --enable-slashpackage[=ROOT]  assume /package installation at ROOT [disabled]
   --enable-absolute-paths       hardcode absolute BINDIR/foobar paths in binaries [disabled]
-  --enable-nsss                 use the nsss library for user information [disabled]
-
+${configure_help_options}
 EOF
 exit 0
 }
@@ -166,7 +165,7 @@ deplibpath=''
 vpaths=''
 vpathd=''
 build=
-usensss=false
+${configure_init_vars}
 
 for arg ; do
   case "$arg" in
@@ -203,8 +202,7 @@ for arg ; do
     --disable-slashpackage) sproot= ; slashpackage=false ;;
     --enable-absolute-paths|--enable-absolute-paths=yes) abspath=true ;;
     --disable-absolute-paths|--enable-absolute-paths=no) abspath=false ;;
-    --enable-nsss|--enable-nsss=yes) usensss=true ;;
-    --disable-nsss|--enable-nsss=no) usensss=false ;;
+${configure_case_lines}
     --enable-*|--disable-*|--with-*|--without-*|--*dir=*) ;;
     --enable-*|--disable-*|--with-*|--without-*|--*dir=*) ;;
     --host=*|--target=*) target=${arg#*=} ;;
@@ -233,7 +231,7 @@ fi
 
 # Expand installation directories
 stripdir prefix
-for i in exec_prefix dynlibdir libexecdir bindir libdir includedir pkgconfdir sysdeps sproot  ; do
+for i in exec_prefix dynlibdir libexecdir bindir libdir includedir pkgconfdir sysdeps sproot ${configure_expand_dirs} ; do
   eval tmp=\${$i}
   eval $i=$tmp
   stripdir $i
@@ -302,7 +300,7 @@ if $slashpackage ; then
   libexecdir=$bindir
   includedir=${home}/include
   pkgconfdir=${home}/pkgconfig
-
+${configure_slashpackage_other}
 fi
 
 # Get usable temp filenames
@@ -420,7 +418,7 @@ else
   LDFLAGS_NOSHARED="${LDFLAGS_NOSHARED}${addlibdpath}"
 fi
 
-
+${configure_extra_checks}
 
 echo "Creating config.mak..."
 cmdline=$(quote "$0")
@@ -497,13 +495,7 @@ if $allpic ; then
 else
   echo "STATIC_LIBS_ARE_PIC :="
 fi
-if $usensss ; then
-  echo "LIBNSSS := -lnsss"
-  echo "MAYBEPTHREAD_LIB := -lpthread"
-else
-  echo "LIBNSSS :="
-  echo "MAYBEPTHREAD_LIB :="
-fi
+${configure_generate_make}
 exec 1>&3 3>&-
 echo "  ... done."
 
@@ -534,7 +526,7 @@ else
   echo "#define ${package_macro_name}_EXTLIBEXECPREFIX \"$libexecdir/\""
 fi
 echo "#define ${package_macro_name}_LIBEXECPREFIX \"$libexecdir/\""
-
+${configure_generate_configh}
 echo
 echo "#endif"
 exec 1>&3 3>&-
